# Accelerate-LLM-FineTune

./: .gitignore  README.md  bash_command.md  pyproject.toml  train_ddp.py  train_fsdp.py
configs/: ddp_config.yaml  fsdp_config.yaml
src/: data.py  train.py  utils.py
